#5: Fixed more ruamel.yaml confusion

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pytest>=3.6
 pytest-cov>=2.6
 hypothesis>=3.23.0
 matplotlib>=2.2.3
-ruamel-yaml>=0.15.46
+ruamel.yaml>=0.15.94
 cmmnbuild-dep-manager>=2.2.2
 pjlsa>=0.0.14
 pytimber>=2.6.2
