--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
 current_version = 0.0.0
-commit = False
-tag = False
+commit = True
+tag = True
 
 [bumpversion:file:setup.py]
 [bumpversion:file:pylhc/__init__.py]
