--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ ruamel.yaml>=0.15.94
 cmmnbuild-dep-manager>=2.2.2
 pjlsa>=0.0.14
 pytimber>=2.6.2
-Sphinx>=1.7.5
-sphinx-rtd-theme>=0.2.4
+tfs>=1.0.2
+generic-parser>=1.0.2
+Sphinx>=1.8.1
+sphinx-rtd-theme>=0.4.3
 travis-sphinx>=2.1.0
 htcondor>=8.9.2
 tfs-pandas>=1.0.3
