--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
-numpy>=1.14.1
+numpy>=1.17.1
 scipy>=1.0.0
 pandas>=0.22.0
 GitPython>=2.1.8
 pytest>=3.6
 pytest-cov>=2.6
 hypothesis>=3.23.0
-matplotlib>=2.2.3
+matplotlib>=3.0.0
 ruamel.yaml>=0.15.94
 cmmnbuild-dep-manager>=2.2.2
 pjlsa>=0.0.14
 pytimber>=2.6.2
-tfs>=1.0.2
-generic-parser>=1.0.2
 Sphinx>=1.8.1
 sphinx-rtd-theme>=0.4.3
 travis-sphinx>=2.1.0
 htcondor>=8.9.2
 tfs-pandas>=1.0.3
 generic-parser>=1.0.2
+JPype1==0.6.3
