--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs>=19.2.0
 numpy>=1.17.1
 scipy>=1.0.0
 pandas>=0.22.0
@@ -15,5 +16,5 @@ sphinx-rtd-theme>=0.4.3
 travis-sphinx>=2.1.0
 htcondor>=8.9.2
 tfs-pandas>=1.0.3
-generic-parser>=1.0.2
+generic-parser>=1.0.5
 JPype1==0.6.3
