--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pandas>=0.22.0
 GitPython>=2.1.8
 pytest>=3.6
 pytest-cov>=2.6
+attrs>=19.2.0
 hypothesis>=3.23.0
 matplotlib>=2.2.3
 ruamel.yaml>=0.15.94
