--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 env:
   global:
     - CC_TEST_REPORTER_ID=0e27bf1c9efa4cf36ab9fcd5398fa2963e197abdb7b9e4bdd93668112809d89a
+
 stages:
   - test
   - name: documentation
@@ -21,6 +22,7 @@ jobs:
   include:
     - &test-stage
       stage: test
+      install: skip # override to not install requirements.txt (dependencies handled by setup.py)
       before_script:
         - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
         - chmod +x ./cc-test-reporter
