updated travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ jobs:
         - chmod +x ./cc-test-reporter
         - ./cc-test-reporter before-build
         - python -m pip install -e git+git://github.com/pylhc/omc3.git#egg=omc3
+        - python -m pip install -e git+git://gitlab.cern.ch/scripting-tools/pyjapc.git#egg=pyjapc
       script:
         - python setup.py test
       after_script:
