--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 codestyle_max_line_length = 100
 codestyle_exclude = doc/conf.py
 addopts = --cov-report xml --cov=pylhc
+python_classes = BasicTests ExtendedTests
 
 [pycodestyle]
 max-line-length = 100
