--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ jobs:
         - chmod +x ./cc-test-reporter
         - ./cc-test-reporter before-build
         - python -m pip install -e git+git://github.com/pylhc/omc3.git#egg=omc3
-        # - python -m pip install -e git+git://gitlab.cern.ch/scripting-tools/pyjapc.git#egg=pyjapc
+        - python -m pip install -e git+https://gitlab.cern.ch/scripting-tools/pyjapc.git#egg=pyjapc
       script:
         - python setup.py test --pytest-args='--mpl'
       after_script:
@@ -50,14 +50,14 @@ jobs:
     - <<: *test-full
       python: 3.7
 
-#    - <<: *test-full
-#      python: 3.8
+    - <<: *test-full
+      python: 3.8
 
     - <<: *test-basic
       python: 3.7
 
-#    - <<: *test-basic
-#      python: 3.8
+    - <<: *test-basic
+      python: 3.8
 
     - stage: documentation
       install:
