--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,10 @@ jobs:
         - chmod +x ./cc-test-reporter
         - ./cc-test-reporter before-build
         - python -m pip install git+git://github.com/pylhc/omc3.git#egg=omc3
-        - python -m pip install git+https://gitlab.cern.ch/scripting-tools/pyjapc.git#egg=pyjapc
+        # Travis tries to get tarball, which is behind CERN SSO
+        # - python -m pip install git+https://gitlab.cern.ch/scripting-tools/pyjapc.git#egg=pyjapc
+        - git clone https://gitlab.cern.ch/scripting-tools/pyjapc.git
+        - python -m pip install pyjapc
       script:
         - python setup.py test --pytest-args='--mpl'
       after_script:
