#18 travis.yml fixed basic tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ jobs:
         - chmod +x ./cc-test-reporter
         - ./cc-test-reporter before-build
         - python -m pip install -e git+git://github.com/pylhc/omc3.git#egg=omc3
-        - python -m pip install git+https://gitlab.cern.ch/scripting-tools/pyjapc.git#egg=pyjapc
+        - python -m pip install -e git+https://gitlab.cern.ch/scripting-tools/pyjapc.git#egg=pyjapc
       script:
         - python setup.py test --pytest-args='--mpl'
       after_script:
@@ -42,6 +42,9 @@ jobs:
     - &test-basic
       stage: test-basic
       install: skip
+      before_script:
+        - python -m pip install -e git+git://github.com/pylhc/omc3.git#egg=omc3
+        - python -m pip install -e git+https://gitlab.cern.ch/scripting-tools/pyjapc.git#egg=pyjapc
       script:
         - python setup.py test --pytest-args='--mpl -o python_classes=BasicTests'
 
