--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [tool:pytest]
 addopts = --cov-report xml --cov=pylhc
-python_classes = BasicTests ExtendedTests
+markers=
+        basic: basic tests run for every commit
+        extended: test that would require lxplus or technical network access
 
 [pycodestyle]
 max-line-length = 100
