--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ jobs:
         - chmod +x ./cc-test-reporter
         - ./cc-test-reporter before-build
       script:
-        - python setup.py test --pytest-args='--mpl'
+        - python -m pytest --mpl
       after_script:
         - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
@@ -49,7 +49,7 @@ jobs:
       stage: test-basic
       <<: *manual_install
       script:
-        - python -m pytest --mpl -m "BasicTests"
+        - python -m pytest --mpl -m "basic"
 
 
     # Define additional python versions for tests
