enhancement: #41 reorganized tests with a single cern_network pytest mark, update CI config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,6 @@
 [tool:pytest]
 markers=
-        basic: basic tests run for every commit
-        extended: test that would require lxplus or technical network access
+        cern_network: tests that require access to afs or the technical network
 
 [pycodestyle]
 max-line-length = 100
