--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ email:
 # Install omc3 and pyjapc manually
 _manual_install: &manual_install
   install:
-    - python -m pip install -e git+git://github.com/pylhc/omc3.git#egg=omc3
+#    - python -m pip install -e git+git://github.com/pylhc/omc3.git#egg=omc3
     - python -m pip install ".[test]"
 
 
@@ -40,7 +40,7 @@ jobs:
         - chmod +x ./cc-test-reporter
         - ./cc-test-reporter before-build
       script:
-        - python -m pytest --mpl --cov-report xml --cov=pylhc
+        - python -m pytest -m "not cern_network" --mpl --cov-report xml --cov=pylhc
       after_script:
         - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
@@ -49,7 +49,7 @@ jobs:
       stage: test-basic
       <<: *manual_install
       script:
-        - python -m pytest --mpl -m "basic"
+        - python -m pytest -m "not cern_network" --mpl --cov-report xml --cov=pylhc
 
 
     # Define additional python versions for tests
