--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,6 @@
 [tool:pytest]
-codestyle_max_line_length = 100
-codestyle_exclude = doc/conf.py
-addopts = --cov-report xml --cov=pylhc
-python_classes = BasicTests ExtendedTests
+markers=
+        cern_network: tests that require access to afs or the technical network
 
 [pycodestyle]
 max-line-length = 100
