--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,7 +15,7 @@ jobs:
     name: ${{ matrix.os }} / ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix:  # only lowest supported python 3 on latest ubuntu
+      matrix:  # only lowest supported Python on latest ubuntu
         os: [ubuntu-latest]
         python-version: [3.7]
 
