--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
     name: ${{ matrix.os }} / ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix:  # only lowest supported python 3 on ubuntu-latest
+      matrix:  # only lowest supported Python on ubuntu-latest
         os: [ubuntu-latest]
         python-version: [3.7]
 
