--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [tool:pytest]
 markers=
         cern_network: tests that require access to afs or the technical network
+; Helpful for pytest-debugging (leave commented out on commit):
+;log_cli=true
+;log_level=DEBUG
 
 [pycodestyle]
 max-line-length = 100
