--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,12 +17,14 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04, macos-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9]
-        exclude:
-          - os: windows-latest
-            python-version: 3.9  # pyTables can't build on that
-          - os: macos-latest
-            python-version: 3.9  # pyTables can't build on that
+        # Make sure to escape 3.10 with quotes so it doesn't get interpreted as float 3.1 by GA's parser
+        python-version: [3.7, 3.8, 3.9, "3.10"]
+        # Wanna try that build for now, TODO: remove later
+        # exclude:
+        #   - os: windows-latest
+        #     python-version: 3.9  # pyTables can't build on that
+        #   - os: macos-latest
+        #     python-version: 3.9  # pyTables can't build on that
 
     steps:
       - uses: actions/checkout@v2
