--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,12 +19,11 @@ jobs:
         os: [ubuntu-18.04, ubuntu-20.04, macos-latest, windows-latest]
         # Make sure to escape 3.10 with quotes so it doesn't get interpreted as float 3.1 by GA's parser
         python-version: [3.7, 3.8, 3.9, "3.10"]
-        # Wanna try that build for now, TODO: remove later
-        # exclude:
-        #   - os: windows-latest
-        #     python-version: 3.9  # pyTables can't build on that
-        #   - os: macos-latest
-        #     python-version: 3.9  # pyTables can't build on that
+        exclude:
+          - os: windows-latest
+            python-version: 3.10  # jpype1 doesn't build there
+          # - os: macos-latest
+          #   python-version: 3.10  # jpype1 doesn't build there
 
     steps:
       - uses: actions/checkout@v2
