--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -20,13 +20,13 @@ jobs:
         python-version: [3.7, 3.8, 3.9, , "3.10", 3.x]  # crons should always run latest python hence 3.x
         exclude:
           - os: windows-latest
-            python-version: 3.9  # pyTables can't build on that
-          - os: macos-latest
-            python-version: 3.9  # pyTables can't build on that
+            python-version: 3.10  # jpype1 doesn't build there
+          # - os: macos-latest
+          #   python-version: 3.10  # jpype1 doesn't build there
           - os: windows-latest
-            python-version: 3.x  # pyTables can't build on that
-          - os: macos-latest
-            python-version: 3.x  # pyTables can't build on that
+            python-version: 3.10  # jpype1 doesn't build there
+          # - os: macos-latest
+          #   python-version: 3.10  # jpype1 doesn't build there
 
     steps:
       - uses: actions/checkout@v2
