--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,11 +1,14 @@
-# Build and publish documentation
+# Build documentation
+# The build is uploaded as artifact if the triggering event is a push for a pull request
+# The build is published to github pages if the triggering event is a push to the master branch (PR merge)
 name: Build and upload documentation
 
 defaults:
   run:
     shell: bash
 
-on:  # Runs on any push event to master
+on:  # Runs on any push event in a PR or any push event to master
+  pull_request:
   push:
     branches:
       - 'master'
@@ -15,9 +18,9 @@ jobs:
     name: ${{ matrix.os }} / ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix:  # only lowest supported Python on latest ubuntu
+      matrix:
         os: [ubuntu-latest]
-        python-version: [3.7]
+        python-version: [3.9]
 
     steps:
       - uses: actions/checkout@v3
@@ -42,10 +45,16 @@ jobs:
       - name: Build documentation
         run: python -m sphinx -b html doc ./doc_build -d ./doc_build
 
-      - name: Upload documentation to gh-pages
-        if: ${{ success() }}
-        uses: JamesIves/github-pages-deploy-action@3.6.2
+      - name: Upload build artifacts  # upload artifacts so reviewers can have a quick look without building documentation from the branch locally
+        uses: actions/upload-artifact@v3
+        if: success() && github.event_name == 'pull_request'  # only for pushes in PR
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: doc_build
+          name: site-build
+          path: doc_build
+          retention-days: 5
+
+      - name: Upload documentation to gh-pages
+        if: success() && github.ref == 'refs/heads/master'  # only for pushes to master
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: doc_build
