--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,10 +5,8 @@ defaults:
   run:
     shell: bash
 
-on:  # Runs on all push events to any branch that isn't master
-  push:
-    branches-ignore:
-      - 'master'
+on:  [push]  # Runs on all push events to any branch
+
 
 jobs:
   tests:
@@ -16,14 +14,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04, macos-latest, windows-latest]
+        os: [ubuntu-20.04, ubuntu-22.04, macos-latest, windows-latest]
         # Make sure to escape 3.10 with quotes so it doesn't get interpreted as float 3.1 by GA's parser
-        python-version: [3.7, 3.8, 3.9, "3.10"]
-        exclude:
-          - os: windows-latest
-            python-version: 3.10  # jpype1 doesn't build there
-          # - os: macos-latest
-          #   python-version: 3.10  # jpype1 doesn't build there
+        python-version: [3.7, 3.8, 3.9, "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
@@ -46,4 +39,4 @@ jobs:
         run: python -m pip install '.[test]'
 
       - name: Run basic tests
-        run: python -m pytest -m "not cern_network" --mpl --cov-report xml --cov=pylhc
+        run: python -m pytest -m "not cern_network" --mpl
