--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ cern = [
     "pyjapc",
 ]
 test = [
-    "pytest>=5.2",
+    "pytest>=7.0",
     "pytest-cov>=2.9",
     "pytest-mpl>=0.15",
 ]
@@ -88,3 +88,13 @@ homepage = "https://github.com/pylhc/PyLHC"
 repository = "https://github.com/pylhc/PyLHC"
 documentation = "https://pylhc.github.io/PyLHC/"
 changelog = "https://github.com/pylhc/PyLHC/blob/master/CHANGELOG.md"
+
+# ----- Testing ----- #
+
+[tool.pytest.ini_options]
+markers = [
+    "cern_network: tests that require access to afs or the technical network",
+]
+# Helpful for pytest-debugging (leave commented out on commit):
+# log_cli=true
+# log_level=DEBUG
